// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Users/Membres En Tant Qu Admin Qui Invite Un Nouvel Utilisateur 1`] = `
<main
  className="fr-container mt-9 mb-16"
  data-test="Users"
>
  <h1
    className="mb-10 lg:mb-14 lg:text-center"
  >
    Gestion des membres
  </h1>
  <h2
    className=""
  >
    Liste des membres
  </h2>
  <div
    className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
  >
    <div
      className="overflow-x-auto w-full"
    >
      <table
        className="min-w-full text-sm text-left"
        data-test="MembreListTable"
      >
        <thead>
          <tr>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Nom et adresse mail
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Fonction
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Champ d'intervention
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Détails fonction
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              <div
                className="flex items-center"
              >
                Accès
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-yolo@dodo.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Dodo
                 
                Yolo
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                yolo@dodo.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Référent·e
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Cheffe de projet PCAET"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Admin
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-yala@dada.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Dada
                 
                Yala
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                yala@dada.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Équipe technique
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                    <div>
                      Économie Circulaire
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Édition
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-john@doe.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Doe
                 
                John
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                john@doe.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Équipe politique
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Lecture
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-invite@dodo.com"
          >
            <td
              className="relative px-4"
              colSpan={4}
            >
              <span
                className="block mb-0.5 text-xs text-gray-500"
              >
                invite@dodo.com
              </span>
              <span
                className="font-medium text-xs text-gray-600"
              >
                Création de compte en attente
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Lecture
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <h2
    className="mt-12"
  >
    Invitation
  </h2>
  <p
    className="italic text-gray-500"
  >
    Tous les champs sont obligatoires
  </p>
  <div
    className="max-w-4xl"
    data-test="invitation-form"
  >
    <form
      action="#"
      className="md:flex gap-6"
      onChange={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="fr-input-group flex-grow"
      >
        <label
          className="fr-label mb-2"
          htmlFor="email"
        >
          <div>
            Adresse email de la personne à inviter
          </div>
        </label>
        <input
          className="fr-input"
          id="email"
          label="Adresse email de la personne à inviter"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="fr-input-group flex-grow"
      >
        <label
          className="fr-label mb-2"
          htmlFor="Niveau d’accès pour cette collectivité"
        >
          <div>
            Niveau d’accès pour cette collectivité
          </div>
        </label>
        <select
          className="fr-select"
          id="Niveau d’accès pour cette collectivité"
          label="Niveau d’accès pour cette collectivité"
          name="acces"
          onBlur={[Function]}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "Admin",
                "value": "admin",
              },
              Object {
                "label": "Édition",
                "value": "edition",
              },
              Object {
                "label": "Lecture",
                "value": "lecture",
              },
            ]
          }
          value=""
        >
          <option
            disabled={true}
            hidden={true}
            value=""
          >
            Sélectionnez une option
          </option>
          <option
            value="admin"
          >
            Admin
          </option>
          <option
            value="edition"
          >
            Édition
          </option>
          <option
            value="lecture"
          >
            Lecture
          </option>
        </select>
      </div>
      <button
        className="fr-btn md:mt-7 md:mb-auto"
        disabled={false}
        type="submit"
      >
        Ajouter
      </button>
    </form>
  </div>
</main>
`;

exports[`Storyshots app/pages/collectivite/Users/Membres En Tant Qu Admin Qui Invite Un Utilisateur Deja Membre 1`] = `
<main
  className="fr-container mt-9 mb-16"
  data-test="Users"
>
  <h1
    className="mb-10 lg:mb-14 lg:text-center"
  >
    Gestion des membres
  </h1>
  <h2
    className=""
  >
    Liste des membres
  </h2>
  <div
    className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
  >
    <div
      className="overflow-x-auto w-full"
    >
      <table
        className="min-w-full text-sm text-left"
        data-test="MembreListTable"
      >
        <thead>
          <tr>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Nom et adresse mail
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Fonction
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Champ d'intervention
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Détails fonction
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              <div
                className="flex items-center"
              >
                Accès
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-yolo@dodo.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Dodo
                 
                Yolo
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                yolo@dodo.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Référent·e
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Cheffe de projet PCAET"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Admin
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-yala@dada.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Dada
                 
                Yala
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                yala@dada.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Équipe technique
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                    <div>
                      Économie Circulaire
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Édition
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-john@doe.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Doe
                 
                John
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                john@doe.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Équipe politique
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Lecture
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-invite@dodo.com"
          >
            <td
              className="relative px-4"
              colSpan={4}
            >
              <span
                className="block mb-0.5 text-xs text-gray-500"
              >
                invite@dodo.com
              </span>
              <span
                className="font-medium text-xs text-gray-600"
              >
                Création de compte en attente
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Lecture
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <h2
    className="mt-12"
  >
    Invitation
  </h2>
  <p
    className="italic text-gray-500"
  >
    Tous les champs sont obligatoires
  </p>
  <div
    className="max-w-4xl"
    data-test="invitation-form"
  >
    <form
      action="#"
      className="md:flex gap-6"
      onChange={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="fr-input-group flex-grow"
      >
        <label
          className="fr-label mb-2"
          htmlFor="email"
        >
          <div>
            Adresse email de la personne à inviter
          </div>
        </label>
        <input
          className="fr-input"
          id="email"
          label="Adresse email de la personne à inviter"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="fr-input-group flex-grow"
      >
        <label
          className="fr-label mb-2"
          htmlFor="Niveau d’accès pour cette collectivité"
        >
          <div>
            Niveau d’accès pour cette collectivité
          </div>
        </label>
        <select
          className="fr-select"
          id="Niveau d’accès pour cette collectivité"
          label="Niveau d’accès pour cette collectivité"
          name="acces"
          onBlur={[Function]}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "Admin",
                "value": "admin",
              },
              Object {
                "label": "Édition",
                "value": "edition",
              },
              Object {
                "label": "Lecture",
                "value": "lecture",
              },
            ]
          }
          value=""
        >
          <option
            disabled={true}
            hidden={true}
            value=""
          >
            Sélectionnez une option
          </option>
          <option
            value="admin"
          >
            Admin
          </option>
          <option
            value="edition"
          >
            Édition
          </option>
          <option
            value="lecture"
          >
            Lecture
          </option>
        </select>
      </div>
      <button
        className="fr-btn md:mt-7 md:mb-auto"
        disabled={false}
        type="submit"
      >
        Ajouter
      </button>
    </form>
  </div>
</main>
`;

exports[`Storyshots app/pages/collectivite/Users/Membres En Tant Qu Admin Qui Invite Un Utilisateur Existant 1`] = `
<main
  className="fr-container mt-9 mb-16"
  data-test="Users"
>
  <h1
    className="mb-10 lg:mb-14 lg:text-center"
  >
    Gestion des membres
  </h1>
  <h2
    className=""
  >
    Liste des membres
  </h2>
  <div
    className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
  >
    <div
      className="overflow-x-auto w-full"
    >
      <table
        className="min-w-full text-sm text-left"
        data-test="MembreListTable"
      >
        <thead>
          <tr>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Nom et adresse mail
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Fonction
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Champ d'intervention
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Détails fonction
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              <div
                className="flex items-center"
              >
                Accès
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-yolo@dodo.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Dodo
                 
                Yolo
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                yolo@dodo.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Référent·e
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Cheffe de projet PCAET"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Admin
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-yala@dada.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Dada
                 
                Yala
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                yala@dada.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Équipe technique
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                    <div>
                      Économie Circulaire
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Édition
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-john@doe.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Doe
                 
                John
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                john@doe.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Équipe politique
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Lecture
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-invite@dodo.com"
          >
            <td
              className="relative px-4"
              colSpan={4}
            >
              <span
                className="block mb-0.5 text-xs text-gray-500"
              >
                invite@dodo.com
              </span>
              <span
                className="font-medium text-xs text-gray-600"
              >
                Création de compte en attente
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Lecture
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <h2
    className="mt-12"
  >
    Invitation
  </h2>
  <p
    className="italic text-gray-500"
  >
    Tous les champs sont obligatoires
  </p>
  <div
    className="max-w-4xl"
    data-test="invitation-form"
  >
    <form
      action="#"
      className="md:flex gap-6"
      onChange={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="fr-input-group flex-grow"
      >
        <label
          className="fr-label mb-2"
          htmlFor="email"
        >
          <div>
            Adresse email de la personne à inviter
          </div>
        </label>
        <input
          className="fr-input"
          id="email"
          label="Adresse email de la personne à inviter"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="fr-input-group flex-grow"
      >
        <label
          className="fr-label mb-2"
          htmlFor="Niveau d’accès pour cette collectivité"
        >
          <div>
            Niveau d’accès pour cette collectivité
          </div>
        </label>
        <select
          className="fr-select"
          id="Niveau d’accès pour cette collectivité"
          label="Niveau d’accès pour cette collectivité"
          name="acces"
          onBlur={[Function]}
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "Admin",
                "value": "admin",
              },
              Object {
                "label": "Édition",
                "value": "edition",
              },
              Object {
                "label": "Lecture",
                "value": "lecture",
              },
            ]
          }
          value=""
        >
          <option
            disabled={true}
            hidden={true}
            value=""
          >
            Sélectionnez une option
          </option>
          <option
            value="admin"
          >
            Admin
          </option>
          <option
            value="edition"
          >
            Édition
          </option>
          <option
            value="lecture"
          >
            Lecture
          </option>
        </select>
      </div>
      <button
        className="fr-btn md:mt-7 md:mb-auto"
        disabled={false}
        type="submit"
      >
        Ajouter
      </button>
    </form>
  </div>
</main>
`;

exports[`Storyshots app/pages/collectivite/Users/Membres En Tant Que Lecteur 1`] = `
<main
  className="fr-container mt-9 mb-16"
  data-test="Users"
>
  <h1
    className="mb-10 lg:mb-14 lg:text-center"
  >
    Gestion des membres
  </h1>
  <h2
    className=""
  >
    Liste des membres
  </h2>
  <div
    className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
  >
    <div
      className="overflow-x-auto w-full"
    >
      <table
        className="min-w-full text-sm text-left"
        data-test="MembreListTable"
      >
        <thead>
          <tr>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Nom et adresse mail
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Fonction
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Champ d'intervention
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              Détails fonction
               
              <span
                className="block text-xs font-normal"
              >
                dans cette collectivité
              </span>
            </th>
            <th
              className="py-3 px-5 whitespace-nowrap"
            >
              <div
                className="flex items-center"
              >
                Accès
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-yolo@dodo.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Dodo
                 
                Yolo
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                yolo@dodo.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <span>
                Référent·e
              </span>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <span
                className="block"
              >
                Climat Air Énergie
              </span>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <span
                className="line-clamp-3"
                title="Cheffe de projet PCAET"
              >
                Cheffe de projet PCAET
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <span>
                Admin
              </span>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-yala@dada.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Dada
                 
                Yala
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                yala@dada.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <span>
                Équipe technique
              </span>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <span
                className="block"
              >
                Climat Air Énergie
              </span>
              <span
                className="block"
              >
                Économie Circulaire
              </span>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <span
                className="line-clamp-3"
                title="Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier"
              >
                Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <span>
                Édition
              </span>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-john@doe.com"
          >
            <td
              className="relative px-4"
            >
              <span
                className="font-bold"
              >
                Doe
                 
                John
              </span>
              <span
                className="block mt-1 text-xs text-gray-500"
              >
                john@doe.com
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="fonction-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex line-clamp-1"
                  >
                    Équipe politique
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="relative px-4 pr-0"
            >
              <div
                data-test="champ_intervention-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto flex flex-col gap-2"
                  >
                    <div>
                      Climat Air Énergie
                    </div>
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
            <td
              className="w-96 relative px-4"
            >
              <div
                className="py-1 px-2 border border-gray-300"
              >
                <textarea
                  className="w-full cursor-text resize-none"
                  data-test="details_fonction-textarea"
                  onBlur={[Function]}
                  onChange={[Function]}
                  value="Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet"
                />
              </div>
            </td>
            <td
              className="relative px-4"
            >
              <div
                data-test="acces-dropdown"
              >
                <button
                  aria-expanded={false}
                  aria-label="ouvrir le menu"
                  className="flex items-center w-full p-2 text-left text-sm"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  toggleOpen={[Function]}
                >
                  <span
                    className="mr-auto"
                  >
                    Lecture
                  </span>
                  <span
                    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr
            className="h-20 border-b border-gray-300 bg-white"
            data-test="MembreRow-invite@dodo.com"
          >
            <td
              className="relative px-4"
              colSpan={4}
            >
              <span
                className="block mb-0.5 text-xs text-gray-500"
              >
                invite@dodo.com
              </span>
              <span
                className="font-medium text-xs text-gray-600"
              >
                Création de compte en attente
              </span>
            </td>
            <td
              className="relative px-4"
            >
              <span>
                Lecture
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</main>
`;
